--- a/20200630/i3S.html
+++ b/20200630/i3S.html
@@ -10,7 +10,7 @@
 
 <script type="text/javascript">
   const INITIAL_VIEW_STATE = {
-    longitude: -120,
+    longitude: -117,
     latitude: 34,
     height: 600,
     width: 800,
@@ -27,14 +27,15 @@
 
   const deckgl = new DeckGL({
     mapboxApiAccessToken: 'pk.eyJ1IjoidmFsdWVjcmVhdGlvbiIsImEiOiJjanM0Z21xamQwNHRrM3lueXZrOHBxZmNmIn0.oF6cKsx1z4NzUNiJ7RTXNQ',
-    mapStyle: 'mapbox://styles/mapbox/dark-v9',
+    mapStyle: 'mapbox://styles/mapbox/streets-v11',
     initialViewState: INITIAL_VIEW_STATE,
     controller: true,
     layers: [
       new Tile3DLayer({
         id: 'tile-3d-layer',
         data:
-          'https://tiles.arcgis.com/tiles/z2tnIkrLQ2BRzr6P/arcgis/rest/services/SanFrancisco_Bldgs/SceneServer/layers/0',
+          //'https://tiles.arcgis.com/tiles/z2tnIkrLQ2BRzr6P/arcgis/rest/services/SanFrancisco_Bldgs/SceneServer/layers/0',
+          'https://services.arcgis.com/wlVTGRSYTzAbjjiC/ArcGIS/rest/services/Tokyo_Building_MP/SceneServer/layers/0?f=pjson',
         loader: I3SLoader,
         onTilesetLoad: (tileset) => {
           const {zoom, cartographicCenter} = tileset;
