--- a/20200630/index.html
+++ b/20200630/index.html
@@ -4,19 +4,24 @@
     <meta charset='UTF-8' />
     <title>i3S Example</title>
     <style>
-      body {
-        font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-        font-size: 13px;
-        -webkit-font-smoothing: antialiased;
-        margin:0;
-        padding:0;
-        overflow:hidden;
-      }
+        body {
+            font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+            font-size: 13px;
+            -webkit-font-smoothing: antialiased;
+            margin:0;
+            padding:0;
+            overflow:hidden;
+            width: 100vw;
+            height: 100vh;
+        }
+        #app {
+            height: 100%;
+        }
     </style>
   </head>
   <body/>
     <div id="app"></div>
-    <script src='./app.js'></script>
+    <script src='./dist/app.js'></script>
   </body>
   <script type="text/javascript">
     App.renderToDOM(document.getElementById('app'));
