--- a/20210127/index.html
+++ b/20210127/index.html
@@ -7,8 +7,7 @@
       content="initial-scale=1,maximum-scale=1,user-scalable=no"
     />
     <title>
-      Intro to MapView - Create a 2D map | Sample | ArcGIS API for JavaScript
-      4.18
+      全国市区町村界データを Tippecanoe で Mapbox Vector tile に変換して、ArcGIS API for JavaScript で表示
     </title>
     <style>
       html,
