--- a/20200630/i3S.html
+++ b/20200630/i3S.html
@@ -26,7 +26,7 @@
   const {I3SLoader} = loaders;
 
   const deckgl = new DeckGL({
-    mapboxApiAccessToken: 'pk.eyJ1IjoidmFsdWVjcmVhdGlvbiIsImEiOiJjanM0Z21xamQwNHRrM3lueXZrOHBxZmNmIn0.oF6cKsx1z4NzUNiJ7RTXNQ',
+    mapboxApiAccessToken: 'pk.eyJ1IjoidmFsdWVjcmVhdGlvbiIsImEiOiJja2swcm9pdWMwazk2MnB0ZzZ5NTVwMXAxIn0.9klPq_GB5cZ0lRZVdZR2_g',
     mapStyle: 'mapbox://styles/mapbox/streets-v11',
     initialViewState: INITIAL_VIEW_STATE,
     controller: true,
